fix z-index

--- a/src/scss/_first-page.scss
+++ b/src/scss/_first-page.scss
@@ -41,7 +41,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        z-index: 1;
+        z-index: 2;
         .one {
             font-size: 4.5vw;
 
@@ -68,6 +68,7 @@
     }
 
     .bg-text {
+        z-index: 1;
         h1 {
             font-size: 25vw;
 
